--- a/index.html
+++ b/index.html
@@ -7,14 +7,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@1,300&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@1,300&family=Rubik+Mono+One&display=swap" rel="stylesheet">
-    <meta charset="utf-8">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Dokdo&family=Princess+Sofia&display=swap" rel="stylesheet">
+  <meta charset="utf-8">
     <script src="sketch.js"></script>
   </head>
   <body>
     <center><h1> Draw your imaginative cloud! </h1></center>
-      <center><p>hit 'd' to display your drawing</p></center>
+      <center><p>click the button below to find your cloud ٩꒰｡•◡•｡꒱۶</p></center>
       <center><p>~hit 's' to save this cloud~</p></center>
 
+      <div class="row">
+          <div class="column" id="canvasDiv">
+          </div>
 
+          <div class="column" id="controlsDiv">
+            <div class="" id="inputFields">
 
+            </div>
+            <button type="button" id="rButton" class="randomizerButton">Click to find your cloud!</button>
+          </div>
+        </div>
+<p>I often look up at the sky on the bus and enjoy finding the clouds' interesting shapes and abstractly drawing on that cloud.
+</p>
 </body></html>
