--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
   </head>
   <body>
     <center><h1> Draw your imaginative cloud! </h1></center>
-      <center><p>click the button below to find your cloud ٩꒰｡•◡•｡꒱۶</p></center>
-      <center><p>~hit 's' to save this cloud~</p></center>
+      <center><p>click the button below to find your cloud ٩꒰｡•◡•｡꒱۶<br>
+      then, use the mouse and draw on it to spread your imagination! </p></center>
+      <center><p>~hit 's' to save this cloud on your computer~</p></center>
 
       <div class="row">
           <div class="column" id="canvasDiv">
@@ -28,6 +29,13 @@
             <button type="button" id="rButton" class="randomizerButton">Click to find your cloud!</button>
           </div>
         </div>
-<p>I often look up at the sky on the bus and enjoy finding the clouds' interesting shapes and abstractly drawing on that cloud.
-</p>
+<h5>I wanted the user to feel creative, fun, and happy <br>
+  while selecting the random cloud pictures and drawing on them. <br>
+  I like to share that fun activity and emotions with many. ヽ(๑╹▽╹๑)ノ <br>
+
+</h5>
+<div class="image">
+<img src="assets/text.png" alt="cloud">
+</div>
+
 </body></html>
