--- a/index.html
+++ b/index.html
@@ -31,11 +31,19 @@
         </div>
 <h5>I wanted the user to feel creative, fun, and happy <br>
   while selecting the random cloud pictures and drawing on them. <br>
-  I like to share that fun activity and emotions with many. ヽ(๑╹▽╹๑)ノ <br>
+  I like to share this fun activity and emotions with many. ヽ(๑╹▽╹๑)ノ <br>
+  You can choose your cloud from the randomomizer of the clouds by clicking the button below<br>
+  and you can freely draw on that chosen cloud by mousepressed function.<br>
+  If you hit ‘s,’ you can save the image too.<br>
+
+
 
 </h5>
 <div class="image">
 <img src="assets/text.png" alt="cloud">
+<img src="assets/text.png" alt="cloud">
+<img src="assets/text.png" alt="cloud">
+
 </div>
 
 </body></html>
