--- a/index.html
+++ b/index.html
@@ -29,21 +29,18 @@
             <button type="button" id="rButton" class="randomizerButton">Click to find your cloud!</button>
           </div>
         </div>
-<h5>I wanted the user to feel creative, fun, and happy <br>
+<center><h5><br>I wanted the user to feel creative, fun, and happy <br>
   while selecting the random cloud pictures and drawing on them. <br>
   I like to share this fun activity and emotions with many. ヽ(๑╹▽╹๑)ノ <br>
   You can choose your cloud from the randomomizer of the clouds by clicking the button below<br>
   and you can freely draw on that chosen cloud by mousepressed function.<br>
-  If you hit ‘s,’ you can save the image too.<br>
+  If you hit ‘s,’ you can save the image too.<br><br>
 
 
 
-</h5>
-<div class="image">
+</h5></center>
+<!-- <div class="image">
 <img src="assets/text.png" alt="cloud">
-<img src="assets/text.png" alt="cloud">
-<img src="assets/text.png" alt="cloud">
-
-</div>
+</div> -->
 
 </body></html>
