--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <body>
     <center><h1> Draw your imaginative cloud! </h1></center>
       <center><p>click the button below to find your cloud ٩꒰｡•◡•｡꒱۶<br>
-      then, use the mouse and draw on it to spread your imagination! </p></center>
+      then, spread your imagination using the mouse and drawing on it!
+ </p></center>
       <center><p>~hit 's' to save this cloud on your computer~</p></center>
 
       <div class="row">
