--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       then, spread your imagination using the mouse and drawing on it!
  </p></center>
       <center><p>~hit 's' to save this cloud on your computer~</p></center>
+      <center><p>~hit 'c' to clear the canvas~</p></center>
 
       <div class="row">
           <div class="column" id="canvasDiv">
